--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,15 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>org.pseudoscript</groupId>
+			<artifactId>core</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.pseudoscript</groupId>
+			<artifactId>assembly</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+  </dependencies>
 </project>
